tests/NormalTests/paczka1/small_fuzzy/97995275.err
Error in line 2: 4XeGhan1D A37 59,9
Error in line 1: A342 A37 0,6
Error in line 7: 25F6YnhPH A3u 84,8
Error in line 5: e9nxW7 S744 22,4
